apps/trema/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trema-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
  - secretName: trema-tls
    hosts:
    - trema.omni.cedille.club
  rules:
  - host: trema.omni.cedille.club
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: trema
            port:
              number: 80
